# dynamic-loader-poc

./: CMakeLists.txt  README.md  cmake-config-template.h  library-loader-base.h  main.cpp  unix-library-loader.cpp  unix-library-loader.h  windows-library-loader.cpp  windows-library-loader.h
mathman/: CMakeLists.txt  mysqrt.cpp
test1/: CMakeLists.txt  main.cpp  test1.cpp  test1.h  test3.cpp  test3.h
test2/: CMakeLists.txt  main.cpp  test2.cpp  test2.h
